--- a/EcoShield-Windows.css
+++ b/EcoShield-Windows.css
@@ -390,6 +390,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-3-1 .u-sheet-1 {
+    min-height: 820px;
+  }
+
   .u-section-3-1 .u-image-1 {
     width: 340px;
     height: 221px;
@@ -465,6 +469,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-3-2 .u-sheet-1 {
+    min-height: 820px;
+  }
+
   .u-section-3-2 .u-image-1 {
     height: 221px;
     margin-top: 20px;
@@ -540,6 +548,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-3-3 .u-sheet-1 {
+    min-height: 820px;
+  }
+
   .u-section-3-3 .u-image-1 {
     height: 221px;
     margin-top: 20px;
@@ -618,6 +630,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-3-4 .u-sheet-1 {
+    min-height: 820px;
+  }
+
   .u-section-3-4 .u-image-1 {
     height: 221px;
     margin-top: 20px;
@@ -695,6 +711,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-3-5 .u-sheet-1 {
+    min-height: 820px;
+  }
+
   .u-section-3-5 .u-image-1 {
     height: 221px;
     margin-top: 20px;
@@ -770,6 +790,10 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-3-6 .u-sheet-1 {
+    min-height: 820px;
+  }
+
   .u-section-3-6 .u-image-1 {
     height: 221px;
     margin-top: 20px;
@@ -1214,6 +1238,21 @@
 @media (max-width: 767px) {
   .u-section-9 .u-repeater-1 {
     grid-template-columns: 100%;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-9 .u-sheet-1 {
+    min-height: 1696px;
+  }
+
+  .u-section-9 .u-list-1 {
+    margin-bottom: 1px;
+    margin-top: 7px;
+  }
+
+  .u-section-9 .u-repeater-1 {
+    min-height: 1688px;
   }
 } .u-section-10 {
   background-image: none;
