--- a/nicepage.css
+++ b/nicepage.css
@@ -43646,9 +43646,14 @@ a.u-link.u-text-hover-grey-90:hover {
 
 
 @media (max-width: 767px) {
+  .u-header .u-sheet-1 {
+    min-height: 191px;
+  }
+
   .u-header .u-btn-1 {
-    margin-top: -121px;
+    margin-top: -124px;
     margin-right: auto;
+    margin-bottom: 4px;
   }
 }
 
