--- a/EcoShield-Windows.css
+++ b/EcoShield-Windows.css
@@ -2074,6 +2074,14 @@
   margin-top: 0;
 }
 
+.u-section-16 .u-container-layout-8 {
+  padding: 30px 50px;
+}
+
+.u-section-16 .u-text-8 {
+  margin: 0 auto 0 0;
+}
+
 .u-section-16 .u-carousel-control-1 {
   width: 50px;
   height: 50px;
@@ -2139,6 +2147,11 @@
     padding-left: 30px;
     padding-right: 30px;
   }
+
+  .u-section-16 .u-container-layout-8 {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -2165,6 +2178,11 @@
   }
 
   .u-section-16 .u-container-layout-7 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-16 .u-container-layout-8 {
     padding-left: 10px;
     padding-right: 10px;
   }
