--- a/About-Us.css
+++ b/About-Us.css
@@ -3,31 +3,51 @@
 }
 
 .u-section-1 .u-text-1 {
-  margin: 33px 0 0;
+  width: 859px;
+  margin: 60px auto;
 }
 
 .u-section-1 .u-btn-1 {
-  letter-spacing: 1px;
-  margin: 31px auto 60px;
+  background-image: none;
+  padding: 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-text-1 {
     width: auto;
+    margin-left: 31px;
+    margin-right: 31px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-text-1 {
+    width: 569px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 183px;
+  }
+
+  .u-section-1 .u-text-1 {
+    width: 375px;
+    margin-top: 54px;
+    margin-bottom: 54px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 281px;
+    min-height: 185px;
   }
 
   .u-section-1 .u-text-1 {
-    margin-top: 41px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-top: 41px;
-    padding: 10px 1px 10px 0;
+    width: auto;
+    margin-left: 1px;
+    margin-right: 1px;
   }
 }
