--- a/Brochure.css
+++ b/Brochure.css
@@ -1,109 +1,91 @@
 .u-section-1 .u-sheet-1 {
-  min-height: 946px;
+  min-height: 929px;
 }
 
 .u-section-1 .u-text-1 {
-  margin: 30px auto 0;
+  margin: 60px auto 0;
 }
 
 .u-section-1 .u-text-2 {
   font-size: 1.5rem;
-  margin: 50px 0 0;
+  margin: 43px 0 0;
 }
 
 .u-section-1 .u-gallery-1 {
-  height: 558px;
-  grid-gap: 17px 17px;
-  margin-top: 30px;
+  height: 552px;
+  margin-top: 44px;
   margin-bottom: 60px;
+  grid-gap: 17px 17px;
 }
 
 .u-section-1 .u-gallery-inner-1 {
-  grid-template-columns: auto auto auto;
+  grid-template-columns: repeat(3, auto);
+  grid-gap: 17px;
 }
 
-.u-section-1 .u-gallery-item-1 {
-  margin-right: 13px;
+.u-section-1 .u-back-slide-1 {
+  transition-duration: 1s;
 }
 
 .u-section-1 .u-over-slide-1 {
-  padding: 0;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
 }
 
-.u-section-1 .u-gallery-item-2 {
-  margin-right: 13px;
+.u-section-1 .u-back-slide-2 {
+  transition-duration: 1s;
 }
 
 .u-section-1 .u-over-slide-2 {
-  padding: 0;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
 }
 
-.u-section-1 .u-gallery-item-3 {
-  margin-right: 13px;
+.u-section-1 .u-back-slide-3 {
+  transition-duration: 1s;
 }
 
 .u-section-1 .u-over-slide-3 {
-  padding: 0;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
 }
 
-.u-section-1 .u-gallery-item-4 {
-  margin-right: 13px;
+.u-section-1 .u-back-slide-4 {
+  transition-duration: 1s;
 }
 
 .u-section-1 .u-over-slide-4 {
-  padding: 0;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
 }
 
-.u-section-1 .u-gallery-nav-1 {
-  position: absolute;
-  left: auto;
-  width: 40px;
-  height: 40px;
-  top: 263px;
-  transform-origin: center center 0px;
-  right: 15px;
-  transform: scaleX(-1);
+.u-section-1 .u-back-slide-5 {
+  transition-duration: 1s;
 }
 
-.u-section-1 .u-gallery-nav-2 {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  transform-origin: center center 0px;
-  left: 15px;
-  top: 263px;
-  transform: scaleX(-1);
+.u-section-1 .u-over-slide-5 {
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.2), rgba(0,0,0,0.2));
+  padding: 20px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-text-1 {
-    width: auto;
-    margin-top: 32px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 832px;
   }
 
-  .u-section-1 .u-text-2 {
-    width: auto;
-    margin-top: 48px;
-  }
-
-  .u-section-1 .u-gallery-inner-1 {
-    grid-template-columns: repeat(3, auto);
-    grid-gap: 0px 0px;
-  }
-
-  .u-section-1 .u-gallery-nav-2 {
-    right: 10px;
+  .u-section-1 .u-gallery-1 {
+    height: 455px;
+    margin-top: 20px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-text-1 {
-    margin-left: 176px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 1176px;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-left: 50px;
-    margin-right: 50px;
+  .u-section-1 .u-gallery-1 {
+    height: 799px;
   }
 
   .u-section-1 .u-gallery-inner-1 {
@@ -112,14 +94,16 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-text-1 {
-    margin-left: 145px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 2669px;
   }
 
   .u-section-1 .u-text-2 {
     font-size: 1rem;
-    margin-left: 0;
-    margin-right: 0;
+  }
+
+  .u-section-1 .u-gallery-1 {
+    height: 2027px;
   }
 
   .u-section-1 .u-gallery-inner-1 {
@@ -128,40 +112,11 @@
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-text-1 {
-    margin-left: 24px;
-    margin-right: 24px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-top: 50px;
+  .u-section-1 .u-sheet-1 {
+    min-height: 1799px;
   }
 
   .u-section-1 .u-gallery-1 {
-    margin-top: 50px;
-  }
-
-  .u-section-1 .u-gallery-item-1 {
-    margin-right: 73px;
-  }
-
-  .u-section-1 .u-gallery-item-2 {
-    margin-right: 73px;
-  }
-
-  .u-section-1 .u-gallery-item-3 {
-    margin-right: 73px;
-  }
-
-  .u-section-1 .u-gallery-item-4 {
-    margin-right: 73px;
-  }
-
-  .u-section-1 .u-gallery-nav-1 {
-    top: 259px;
-  }
-
-  .u-section-1 .u-gallery-nav-2 {
-    top: 259px;
+    height: 1301px;
   }
 }
