--- a/Contact-Form.css
+++ b/Contact-Form.css
@@ -32,20 +32,48 @@
   margin-left: 0;
 }
 
+.u-section-1 .u-label-1 {
+  font-weight: 700;
+}
+
 .u-section-1 .u-form-group-2 {
   margin-left: 0;
+}
+
+.u-section-1 .u-label-2 {
+  font-weight: 700;
 }
 
 .u-section-1 .u-form-group-3 {
   margin-left: 0;
 }
 
+.u-section-1 .u-label-3 {
+  font-weight: 700;
+}
+
+.u-section-1 .u-label-4 {
+  font-weight: 700;
+}
+
 .u-section-1 .u-form-group-5 {
   margin-left: 0;
 }
 
+.u-section-1 .u-label-5 {
+  font-weight: 700;
+}
+
 .u-section-1 .u-form-group-6 {
   margin-left: 0;
+}
+
+.u-section-1 .u-label-6 {
+  font-weight: 700;
+}
+
+.u-section-1 .u-label-7 {
+  font-weight: 700;
 }
 
 .u-section-1 .u-btn-1 {
